# python-template

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tasks.py
app/: main.py
tests/: ruff.toml  test_main.py
