[tool.poetry]
name = "temp"
version = "0.1.0"
description = "temp"
authors = ["bkm <bk-m@example.com>"]
readme = "README.md"
license = "NOLICENSE"
homepage = "https://example.com/"
repository = "https://example.com/user/repo"
documentation = "https://example.com/docs/"
keywords = ["keyword1", "keyword2"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
invoke = "^2.2.0"

[tool.poetry.scripts]
my-app = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
check = true

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tasks.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
select = ["ALL"]
ignore = ["D212", "D200"]
respect-gitignore = true
exclude = ["__init__.py"]
line-length = 88
target-version = "py311"
task-tags = ["TODO", "FIXME"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.pydocstyle]
convention = "google"
