[tool.poetry]
authors = ["bkm <bk-m@example.com>"]
description = "temp"
documentation = "https://example.com/docs/"
homepage = "https://example.com/"
keywords = ["keyword1", "keyword2"]
license = "NOLICENSE"
name = "temp"
packages = [{ include = "app" }]
readme = "README.md"
repository = "https://example.com/user/repo"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
invoke = "^2.2.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
ruff = "^0.2.0"

[tool.poetry.scripts]
my-app = "app.main:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
check = true
include = '\.pyi?$'
line-length = 88
target-version = ['py311']

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = ["tasks.py"]
follow_imports = "skip"
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "tests.*"

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
exclude = ["__init__.py"]
line-length = 88
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = ["D212", "D200"]
lint.select = ["ALL"]
lint.task-tags = ["TODO", "FIXME"]
respect-gitignore = true
target-version = "py311"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"
